# CppTelegramBotAPI

./: CMakeLists.txt  README.md  main.cpp
Types/: Audio.cpp  Chat.cpp  ChatPhoto.cpp  ChatPhoto.h  Contact.cpp  Document.cpp  Document.h  Game.cpp  Invoice.cpp  Invoice.h  Location.cpp  Location.h  Message.cpp  Message.h  MessageEntity.cpp  PhotoSize.cpp  PhotoSize.h  Sticker.cpp  SuccessfulPayment.cpp  User.cpp  User.h  Venue.cpp  Venue.h  Video.cpp  VideoNote.cpp  Voice.cpp  Voice.h
Types/Headers/: Audio.h  Chat.h  Contact.h  Document.h  Game.h  MessageEntity.h  Sticker.h  SuccessfulPayment.h  Video.h  VideoNote.h
Types/Sources/: Audio.cpp  Chat.cpp  ChatPhoto.cpp  Contact.cpp  Document.cpp  Game.cpp  Invoice.cpp  Location.cpp  Message.cpp  MessageEntity.cpp  PhotoSize.cpp  Sticker.cpp  SuccessfulPayment.cpp  User.cpp  Venue.cpp  Video.cpp  VideoNote.cpp  Voice.cpp
